--- a/SimpleWeather.UWP/Controls/AQIControl.xaml
+++ b/SimpleWeather.UWP/Controls/AQIControl.xaml
@@ -7,7 +7,8 @@
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    MinWidth="400">
 
     <StackPanel>
         <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
@@ -16,7 +17,7 @@
                 <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='Air Quality Index'}"
                            FontSize="15" />
             </toolkitControls:HeaderedContentControl.Header>
-            <RelativePanel Height="90">
+            <RelativePanel MinHeight="90">
                 <TextBlock x:Name="AQIndex" Width="75"
                            TextAlignment="Center" VerticalAlignment="Top"
                            FontSize="32" FontWeight="Medium"
@@ -38,6 +39,7 @@
                            RelativePanel.AlignRightWith="AQIndex" />
                 <TextBlock x:Name="AQIBlock" FontSize="14"
                            Padding="5,2" VerticalAlignment="Top"
+                           MaxLines="3"
                            TextWrapping="Wrap" TextTrimming="WordEllipsis"
                            Text="{x:Bind ViewModel.Description, Mode=OneWay, FallbackValue='Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects'}"
                            RelativePanel.RightOf="AQIndex"
