--- a/SimpleWeather.UWP/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.UWP/Controls/BeaufortControl.xaml
@@ -7,7 +7,8 @@
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    MinWidth="340">
 
     <UserControl.Resources>
         <ResourceDictionary>
