--- a/SimpleWeather.UWP/Controls/MoonPhaseControl.xaml
+++ b/SimpleWeather.UWP/Controls/MoonPhaseControl.xaml
@@ -6,7 +6,8 @@
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    MinWidth="450">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -32,7 +33,7 @@
     </UserControl.Resources>
 
     <StackPanel>
-        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch" 
+        <toolkitControls:HeaderedContentControl HorizontalContentAlignment="Stretch"
                                                 Style="{StaticResource SectionLabelStyle}">
             <toolkitControls:HeaderedContentControl.Header>
                 <TextBlock Text="{x:Bind ViewModel.Title, Mode=OneWay, FallbackValue='Moon'}"
@@ -74,7 +75,7 @@
                     </TextBlock>
                 </StackPanel>
                 <TextBlock Text="{x:Bind ViewModel.MoonPhase.Value, Mode=OneWay}"
-                           FontSize="18" Padding="5" 
+                           FontSize="18" Padding="5"
                            VerticalAlignment="Center" HorizontalAlignment="Center" />
             </StackPanel>
         </toolkitControls:HeaderedContentControl>
