WeatherNow: ImageEx adjustments
* Update ProgressBar color
* Adjust ParallaxView vertical shift

--- a/SimpleWeather.UWP/App.xaml
+++ b/SimpleWeather.UWP/App.xaml
@@ -487,6 +487,7 @@
                                       VerticalAlignment="Center"
                                       Background="Transparent"
                                       Foreground="{TemplateBinding Foreground}"
+                                      Height="36" Width="36"
                                       IsActive="False"
                                       Visibility="Collapsed" />
                                 <VisualStateManager.VisualStateGroups>
